--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
     implementation 'androidx.core:core-ktx:1.2.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
@@ -39,4 +39,14 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation "androidx.recyclerview:recyclerview:1.0.0"
+
+    // LiveData + ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha01"
+//    implementation "androidx.lifecycle:lifecycle-runtime:2.2.0-alpha01"
+//    implementation "androidx.lifecycle:lifecycle-livedata-core:2.2.0-alpha01"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01"
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0'
+//    implementation "androidx.lifecycle:lifecycle-compiler:2.2.0-alpha01"
+//    implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0-alpha01"
+//    implementation "androidx.lifecycle:lifecycle-common:2.2.0-alpha01"
 }
