--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,16 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".data.binding.observable.ObservableActivity">
+        <activity android:name=".navigation.NavigationActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
 
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".livedata.LiveDataActivity">
+        </activity>
+        <activity android:name=".data.binding.observable.ObservableActivity">
         </activity>
         <activity android:name=".data.binding.function.FunctionActivity">
         </activity>
@@ -23,11 +31,6 @@
         <activity android:name=".data.binding.list.ListActivity">
         </activity>
         <activity android:name=".data.binding.DataBindingActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
         <activity android:name=".KTXActivity">
         </activity>
